# Spatial-Facility-Location

./: .gitignore  Dockerfile  README.md  distance.cpp  manual_instalacion.md  manual_uso.md
Spatial_Facility_Location/: write_array.py
Spatial_Facility_Location/Debug/: distance  makefile  objects.mk  script.sh
Spatial_Facility_Location/Debug/src/: bellford.d  dijkstra.d  dijkstra_bck.cpp  distance.d  morton.d  subdir.mk  tree.d
Spatial_Facility_Location/Release/: makefile
Spatial_Facility_Location/Release/src/: DisplayImage.d  exploracion.d  kmeans.d  main.d  subdir.mk
Spatial_Facility_Location/src/: DisplayImage.cpp  bellford.cpp  dijkstra.cpp  dist  distance.h  exploracion.cpp  exploracion.h  kmeans.cpp  morton.cpp  structure.h  treenode.h
a*Costos/Debug/: a*Costos  makefile
a*Costos/Debug/src/: a*Costos.d  subdir.mk
a*Costos/src/: a*Costos.cpp
distance/: input_data.txt  out.txt  output.txt
distance/Debug/: distance  makefile  objects.mk
distance/Debug/src/: DisplayImage.d  distance.d  exploracion.d  main.d  subdir.mk  tree.d
distance/src/: DisplayImage.cpp  distance.cpp  exploracion.cpp  main.cpp  out.txt  tree.cpp  write_array.py
images/: .webpage.png.icloud  Docker Quickstart Terminal.lnk
src/: CMakeLists.txt  DisplayImage.cpp  bell-ford.cpp  bell-ford.h  bellford.cpp  communities.cpp  communities.h  dijkstra-2020-06-18_12-42-56-301.cpp  dijkstra.cpp  dijkstra.h  distance.cpp  distance.h  exploracion.cpp  exploracion.h  main-2020-06-16_23-36-52-620.cpp  main-2020-06-17_15-45-18-432.cpp  main.cpp  matrix.h  morton.h  raster.cpp  raster.h  tree.cpp  tree.h
src/communities/HeaderFiles/: communities.h  import_geometry.h  morton.h
src/communities/SourceFiles/: Biomasa_test1.tif  ClusterCommunitiesKMeans.csv  communities.cpp  communities.csv  import_geometry.cpp  kmeans.cpp  main.cpp  morton.cpp  read_tiff.cpp  sortedCommunities.csv  test.csv  test_kenya.csv
